@@ -12,6 +12,17 @@ Description: kernel of FreeBSD @version@ image
  .
  This package is compiled for a @flavor@-class machine.
 
+Package: ndiswrapper-modules-@version@-@abiname@-@flavor@
+Architecture: kfreebsd-@arch@
+Section: contrib/net
+Priority: optional
+Depends: kfreebsd-image-@version@-@abiname@-@flavor@
+Provides: ndiswrapper-modules
+Conflicts: ndiswrapper-modules
+Description: Ndiswrapper kFreeBSD module
+ This package contains the ndiswrapper loadable kernel modules for the
+ kfreebsd-image-@version@-@abiname@-@flavor@ package.
+
 Package: kfreebsd-image-@major@-@flavor@
 Architecture: kfreebsd-@arch@
 Section: base
