@@ -30,8 +30,11 @@ kfreebsd-6 (6.0-0.1) UNRELEASED; urgency=low
     - patches/900_devfs_perm_fixes.diff: Remove.
   * rules: Run patch with --dry-run first.  This way if a patch fails
     the tree isn't left in an inconsistent state.
+  * Add ndiswrapper-modules package.
+    - rules: Install ndis.ko and if_ndis.ko there.
+    - control.flavor.in: Add ndiswrapper-modules flavor.
 
- -- Robert Millan <rmh@aybabtu.com>  Fri, 17 Feb 2006 20:20:41 +0100
+ -- Robert Millan <rmh@aybabtu.com>  Sun, 19 Feb 2006 13:34:24 +0100
 
 kfreebsd-5 (5.3-6) unstable; urgency=low
 
